k8s/overlays/azure-prod/amd64-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: .* # Applies to all Deployments in the base
spec:
  template:
    spec:
      # This standard Kubernetes label restricts pods to nodes with the AMD64 architecture.
      nodeSelector:
        kubernetes.io/arch: amd64
