k8s/overlays/azure-prod/nrdot-mssql-environment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nrdot-collector-mssql
spec:
  template:
    spec:
      containers:
      - name: nrdot-collector-mssql
