k8s/overlays/azure-prod/relibank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relibank-ingress
  namespace: relibank
spec:
  # If using the AKS App Routing Add-on, use this field instead of the annotation above:
  ingressClassName: azure-application-gateway 
  # defaultBackend:
  #   service:
  #     name: frontend-service
  #     port:
  #       number: 3000
  rules:
    - http: 
        paths:
        - path: /bill-pay-service
          pathType: Prefix
          backend:
            service:
              name: bill-pay-service
              port:
                number: 5000
        - path: /transaction-service
          pathType: Prefix
          backend:
            service:
              name: transaction-service
              port:
                number: 5001
        - path: /accounts-service
          pathType: Prefix
          backend:
            service:
              name: accounts-service
              port:
                number: 5002
        - path: /support-service
          pathType: Prefix
          backend:
            service:
              name: support-service
              port:
                number: 5003
        - path: /risk-assessment-service
          pathType: Prefix
          backend:
            service:
              name: risk-assessment-service
              port:
                number: 5001
        - path: /scenario-runner
          pathType: Prefix
          backend:
            service:
              name: scenario-runner-service
              port:
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service 
              port:
                number: 3000
